base/internal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-deployment
  labels:
    app: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal
  template:
    metadata:
      labels:
        app: internal
    spec:
      containers:
        - name: internal
          image: joel1st/internal-server:v1
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: internal-service
spec:
  selector:
    app: internal
  ports:
    - port: 9001
      targetPort: 9001
